Enhance documentation instructions for Terraform Azure, TypeSpec M365 Copilot, and code change synchronization
- Updated Terraform Azure instructions to enforce conventions for AVM usage, file layout, and operational safety.
- Revised TypeSpec M365 Copilot guidelines to clarify conventions for agents and API plugins, including good/bad examples.
- Streamlined documentation update instructions to ensure synchronization with code changes, emphasizing the importance of maintaining accurate README.md, API docs, and changelogs.